# redis_min

./: README.md  REPORT.md  bundle-macos.sh  index.html  package-lock.json  package.json
src/: App.tsx  main.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CommandPalette.tsx  Dialog.tsx  Inspector.tsx  ResizeHandles.tsx  Sidebar.tsx  Statusbar.tsx  TabsBar.tsx  Titlebar.tsx  Toast.tsx
src/components/inspector/: PayloadPanel.tsx
src/components/views/: ConnectionView.tsx  ConsoleView.tsx  InfoView.tsx  KeyView.tsx  KeysView.tsx  MonitorView.tsx  PubSubView.tsx  SettingsView.tsx  WelcomeView.tsx
src/lib/: elemOps.ts  format.ts  keyFormat.ts  monaco.ts  persist.ts  queries.ts  redis.ts  tabs.test.mjs  tabs.ts  themeContract.ts  types.ts  updateCheck.selfcheck.mjs  updateCheck.ts  useSort.ts
src/styles/: base.css  components.css  layout.css  views.css
src/types/: monaco-vim.d.ts
src/ui/: Badge.tsx  CodeInput.tsx  ColorPicker.tsx  Combobox.tsx  ContextMenu.tsx  DateTimeModal.tsx  FormRow.tsx  Icon.tsx  JsonView.tsx  MetricPanel.tsx  MiniTabs.tsx  Pills.tsx  SortTh.tsx
