[package]
name = "redismin"
version = "1.0.0-alpha"
description = "Minimal Redis/Valkey desktop client"
edition = "2021"

[lib]
name = "redismin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "0.27", features = ["tokio-comp", "tokio-rustls-comp", "tls-rustls-insecure"] }
tokio = { version = "1", features = ["sync", "time"] }
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[profile.release]
lto = true
codegen-units = 1
